Product bundle: Some refactoring and started with new template view for bundled items

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -2003,7 +2003,8 @@ table.cart .cart-item-row .qty-input {
 	margin: 5px 0;
     clear: both;
 }
-.product-details-page .no-associated-products {
+.product-details-page .no-associated-products,
+.product-details-page .no-bundled-products {
     font-weight: bold;
 }
 .control-label.required {
