--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemEditPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemEditPopup.cshtml
@@ -11,7 +11,7 @@
     @Html.ValidationSummary(false)
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.ProductId)
-    @Html.HiddenFor(model => model.ParentBundledProductId)
+    @Html.HiddenFor(model => model.BundleProductId)
     
     <div class="section-header">
         <div class="title">@ViewBag.Title</div>
@@ -29,7 +29,7 @@
     <div id="BundleItemsLocalizedContainer">
         @(Html.LocalizedEditor<ProductBundleItemModel, ProductBundleItemLocalizedModel>("productbundleitem-localized",
         @<table class="adminContent">
-            <tr class="bundle-item-localized-name">
+            <tr>
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.Locales[item].Name)
                 </td>
@@ -38,7 +38,7 @@
                     @Html.ValidationMessageFor(model => model.Locales[item].Name)
                 </td>
             </tr>
-            <tr class="bundle-item-localized-shortdescription">
+            <tr>
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.Locales[item].ShortDescription)
                 </td>
@@ -57,15 +57,6 @@
         @<table class="adminContent">
             <tr>
                 <td class="adminTitle">
-                    @Html.SmartLabelFor(model => model.OverrideName)
-                </td>
-                <td class="adminData">
-                    @Html.EditorFor(model => model.OverrideName)
-                    @Html.ValidationMessageFor(model => model.OverrideName)
-                </td>
-            </tr>
-            <tr class="bundle-item-localized-name">
-                <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.Name)
                 </td>
                 <td class="adminData">
@@ -74,15 +65,6 @@
                 </td>
             </tr>
             <tr>
-                <td class="adminTitle">
-                    @Html.SmartLabelFor(model => model.OverrideShortDescription)
-                </td>
-                <td class="adminData">
-                    @Html.EditorFor(x => x.OverrideShortDescription)
-                    @Html.ValidationMessageFor(model => model.OverrideShortDescription)
-                </td>
-            </tr>
-            <tr class="bundle-item-localized-shortdescription">
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.ShortDescription)
                 </td>
@@ -163,26 +145,6 @@
                 <button type="submit" name="save" value="save" class="btn btn-primary">
                     <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
-
-                <script type="text/javascript">
-                    $(document).ready(function () {
-
-                        $("#@Html.FieldIdFor(model => model.OverrideName)").change(toggleLocalizedName).trigger('change');
-                        $("#@Html.FieldIdFor(model => model.OverrideShortDescription)").change(toggleLocalizedShortDescription).trigger('change');
-                    });
-
-                    function toggleLocalizedName() {
-                        $('#BundleItemsLocalizedContainer').find('.bundle-item-localized-name').toggle(
-                            $('#@Html.FieldIdFor(model => model.OverrideName)').is(':checked')
-                        );
-                    }
-
-                    function toggleLocalizedShortDescription() {
-                        $('#BundleItemsLocalizedContainer').find('.bundle-item-localized-shortdescription').toggle(
-                            $('#@Html.FieldIdFor(model => model.OverrideShortDescription)').is(':checked')
-                        );
-                    }
-                </script>
             </td>
         </tr>
     </table>
