--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -119,6 +119,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.BundledProductPictureSize)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.BundledProductPictureSize)
+                @Html.ValidationMessageFor(model => model.BundledProductPictureSize)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CategoryThumbPictureSize)
             </td>
             <td class="adminData">
