--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.BundleItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.BundleItems.cshtml
@@ -120,6 +120,12 @@
                 $("#bundleitems-grid").data('tGrid').ajaxRequest();
                 return false;
             });
+
+        	$('#@Html.FieldIdFor(model => model.BundlePerItemPricing)').change(function () {
+        		$('#TierPriceContainer').toggle(
+					!$('#@Html.FieldIdFor(model => model.BundlePerItemPricing)').is(':checked')
+				);
+        	}).trigger('change');
         });
 
         function onRowDataBound_bundleItems(e) {
