--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Price.cshtml
@@ -155,7 +155,7 @@
         </tr>
     </table>
 
-    <div style="margin-top:30px;">
+    <div id="TierPriceContainer" style="margin-top:30px;">
         <h3>@T("Admin.Catalog.Products.TierPrices")</h3>
 
         @if (Model.Id > 0)
