--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
@@ -3,6 +3,7 @@
 @using SmartStore.Core.Domain.Common;
 @using SmartStore.Core.Domain.Orders;
 @using SmartStore.Core.Domain.Seo;
+@using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Core.Infrastructure;
 @using SmartStore.Services.Events;
 @using SmartStore.Web.Models.Catalog;
@@ -192,17 +193,41 @@
                         <!--product reviews-->
                         @Html.Action("ProductReviewOverview", "Catalog", new { productId = Model.Id })
 
-                        <!-- product attributes -->
+                        <!-- product attributes or bundle items -->
                         @{
-                            var dataDictAttributes = new ViewDataDictionary();
-                            dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
+							if (Model.ProductType == ProductType.BundledProduct)
+							{
+								<div class="product-collateral clearfix">
+									@if (Model.BundleTitleText.HasValue() && Model.BundledItems.Count > 0)
+									{
+										<div><h4>@Model.BundleTitleText</h4></div>
+									}
+									<div class="product-variant-list">
+										@foreach (var bundleItemModel in Model.BundledItems)
+										{
+											var dataDictBundleItems = new ViewDataDictionary();
+											dataDictBundleItems.TemplateInfo.HtmlFieldPrefix = string.Format("bundleitem_{0}", bundleItemModel.BundleItem.Id);
+											@Html.Partial("_ProductBundleItems", bundleItemModel, dataDictBundleItems)
+										}
+										@if (Model.BundledItems.Count == 0)
+										{
+											<div class="no-bundled-products">@T("Products.NoBundledItems")</div>
+										}
+									</div>
+								</div>
+							}
+							else
+							{
+								var dataDictAttributes = new ViewDataDictionary();
+								dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
 
-                            if (Model.ProductVariantAttributes.Count > 0)
-                            { 
-                                <div class="product-attributes line">
-                                    @Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)                  
-                                </div>
-                            }
+								if (Model.ProductVariantAttributes.Count > 0)
+								{ 
+									<div class="product-attributes line">
+										@Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)                  
+									</div>
+								}
+							}
                         }
                     
                         <!-- giftcard infos -->                    
