Product bundle: Improved pricing for product page

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1942,7 +1942,7 @@ table.cart .cart-item-row .qty-input {
 .product-details-page #details-cnt .short-description {
 	color: #aaa;
 }
-.product-details-page #details-cnt .price-details {
+.product-details-page .price-details {
 	background: #f8fafc;
 	padding: 8px !important;
 	margin: 0;
@@ -1955,6 +1955,9 @@ table.cart .cart-item-row .qty-input {
 	position: relative;
 	padding-left: 25px;
 	padding-right: 25px;
+}
+.product-details-page .add-to-cart {
+	padding-top: 10px;
 }
 .product-details-page #details-cnt .add-to-cart .icon-plus-sign {
 	position: absolute;
