--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
@@ -205,5 +205,16 @@
                 @Html.ValidationMessageFor(model => model.ShowDeliveryTimes)
             </td>
         </tr>
+
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowShortDesc)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowShortDesc)
+                @Html.ValidationMessageFor(model => model.ShowShortDesc)
+            </td>
+        </tr>
+
     </table>
 }
